--- a/requirements.txt
+++ b/requirements.txt
@@ -14,16 +14,21 @@ django-celery-beat==2.8.0
 django-environ==0.12.0
 django-tailwind==4.0.1
 django-timezone-field==7.1
+flower==2.0.1
+humanize==4.12.3
 idna==3.10
 kombu==5.5.3
 pika==1.3.2
+prometheus_client==0.21.1
 prompt_toolkit==3.0.51
 psycopg2==2.9.10
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
+pytz==2025.2
 requests==2.32.3
 six==1.17.0
 sqlparse==0.5.3
+tornado==6.4.2
 tzdata==2025.2
 urllib3==2.4.0
 vine==5.1.0
